--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@
 
 body {
   background-color: #fff;
-  width: 100vw;
 }
 
 h1 {
@@ -50,6 +49,17 @@ header {
   box-shadow: 0 15px 40px rgba(102, 145, 53, 0.173);
 }
 
+@media (max-width: 1100px) {
+  #nav {
+    padding: 20px 60px;
+  }
+
+  #nav.sticky {
+    padding: 20px 60px;
+    box-shadow: 0 15px 40px rgba(102, 145, 53, 0.173);
+  }
+}
+
 nav a {
   text-decoration: none;
   transition: all 400ms;
@@ -70,7 +80,75 @@ nav a {
   color: #669135;
 }
 
+#nav .active a {
+  color: #669135;
+}
+
+/* Menu burguer */
+
+.burguer-menu {
+  display: none;
+  cursor: pointer;
+  width: 25px;
+}
+
+.burguer-menu-open {
+  display: none;
+}
+
+.burguer-menu-close {
+  display: none;
+}
+
+.burguer-menu-close.close {
+  display: block;
+}
+
+.burguer-menu-open.open {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  .burguer-menu {
+    display: block;
+  }
+
+  .burguer-menu-open {
+    display: block;
+  }
+
+  #nav {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    display: none;
+  }
+
+  .nav-links.open {
+    display: flex;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100%;
+  }
+
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    background-color: #1a250e;
+    width: 100%;
+  }
+
+  .nav-links ul li a {
+    color: #fff;
+  }
+}
+
 a.button {
+  display: inline-block;
   background-color: #669135;
   padding: 12px 30px;
   color: #fff;
@@ -86,9 +164,10 @@ a.button {
 .button:hover {
   background-color: #fff;
   color: #669135;
-
   box-shadow: none;
 }
+
+/* Section home */
 
 section.home {
   display: flex;
@@ -98,17 +177,41 @@ section.home {
 }
 
 section.home img {
-  max-width: 55rem;
+  max-width: 50%;
   object-fit: cover;
 }
 
+@media (max-width: 700px) {
+  section.home {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+  }
+  section.home img {
+    max-width: 80%;
+    object-fit: cover;
+  }
+}
+
 .hero-text {
-  width: 600px;
+  width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
-  align-items: self-start;
-  margin: 0 auto;
+  justify-self: center;
+}
+
+.hero-text > div {
+  max-width: 35.5rem;
+  margin-left: 10rem;
+}
+
+@media (max-width: 1100px) {
+  .hero-text > div {
+    margin-left: 5rem;
+  }
 }
 
 .hero-text h1 {
@@ -142,20 +245,29 @@ section.home img {
 }
 
 .product-info {
-  width: 600px;
+  max-width: 600px;
 }
 
 .brand-logo {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 60px;
   padding: 100px;
 }
 
+@media (max-width: 1040px) {
+  .brand-logo {
+    padding: 30px;
+    gap: 30px;
+  }
+}
+
 .products-img {
   display: flex;
-  justify-content: center;
   gap: 40px;
+  flex-wrap: wrap;
+  justify-content: center;
   margin: 80px 0 100px;
 }
 
@@ -193,17 +305,24 @@ section.home img {
 /* section about */
 
 .about img {
-  width: 600px;
+  max-width: 600px;
+}
+
+@media (max-width: 700px) {
+  .about img {
+    max-width: 380px;
+  }
 }
 
 .about {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 4rem;
 }
 
 .about > div {
-  width: 500px;
+  max-width: 500px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -221,7 +340,7 @@ section.home img {
 /* section newsletter */
 
 .newsletter {
-  width: 570px;
+  max-width: 570px;
   margin: 100px auto;
   text-align: center;
 }
@@ -234,7 +353,7 @@ section.home img {
 }
 
 .newsletter input {
-  width: 330px;
+  max-width: 330px;
   padding: 0 25px;
   background-color: #e6f1da;
   border: none;
@@ -265,4 +384,8 @@ footer img {
 
 footer a {
   color: #fff;
+}
+
+footer a:hover {
+  color: #669135;
 }
