--- a/style.css
+++ b/style.css
@@ -49,17 +49,6 @@ header {
   box-shadow: 0 15px 40px rgba(102, 145, 53, 0.173);
 }
 
-@media (max-width: 1100px) {
-  #nav {
-    padding: 20px 60px;
-  }
-
-  #nav.sticky {
-    padding: 20px 60px;
-    box-shadow: 0 15px 40px rgba(102, 145, 53, 0.173);
-  }
-}
-
 nav a {
   text-decoration: none;
   transition: all 400ms;
@@ -108,45 +97,6 @@ nav a {
   display: none;
 }
 
-@media (max-width: 900px) {
-  .burguer-menu {
-    display: block;
-  }
-
-  .burguer-menu-open {
-    display: block;
-  }
-
-  #nav {
-    justify-content: space-between;
-  }
-
-  .nav-links {
-    display: none;
-  }
-
-  .nav-links.open {
-    display: flex;
-    position: absolute;
-    top: 64px;
-    left: 0;
-    width: 100%;
-  }
-
-  .nav-links ul {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    gap: 10px;
-    background-color: #1a250e;
-    width: 100%;
-  }
-
-  .nav-links ul li a {
-    color: #fff;
-  }
-}
-
 a.button {
   display: inline-block;
   background-color: #669135;
@@ -181,19 +131,6 @@ section.home img {
   object-fit: cover;
 }
 
-@media (max-width: 700px) {
-  section.home {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 60px;
-  }
-  section.home img {
-    max-width: 80%;
-    object-fit: cover;
-  }
-}
-
 .hero-text {
   width: 100%;
   display: flex;
@@ -206,12 +143,6 @@ section.home img {
 .hero-text > div {
   max-width: 35.5rem;
   margin-left: 10rem;
-}
-
-@media (max-width: 1100px) {
-  .hero-text > div {
-    margin-left: 5rem;
-  }
 }
 
 .hero-text h1 {
@@ -254,13 +185,6 @@ section.home img {
   flex-wrap: wrap;
   gap: 60px;
   padding: 100px;
-}
-
-@media (max-width: 1040px) {
-  .brand-logo {
-    padding: 30px;
-    gap: 30px;
-  }
 }
 
 .products-img {
@@ -306,12 +230,6 @@ section.home img {
 
 .about img {
   max-width: 600px;
-}
-
-@media (max-width: 700px) {
-  .about img {
-    max-width: 380px;
-  }
 }
 
 .about {
@@ -388,4 +306,109 @@ footer a {
 
 footer a:hover {
   color: #669135;
+}
+
+/* Media queries */
+
+@media (max-width: 1100px) {
+  #nav {
+    padding: 20px 60px;
+  }
+
+  #nav.sticky {
+    padding: 20px 60px;
+    box-shadow: 0 15px 40px rgba(102, 145, 53, 0.173);
+  }
+
+  .hero-text > div {
+    margin-left: 5rem;
+  }
+}
+
+@media (max-width: 1040px) {
+  .brand-logo {
+    padding: 30px;
+    gap: 30px;
+  }
+}
+
+@media (max-width: 900px) {
+  .hero-text > div {
+    margin-left: 4rem;
+  }
+
+  .burguer-menu {
+    display: block;
+  }
+
+  .burguer-menu-open {
+    display: block;
+  }
+
+  #nav {
+    justify-content: space-between;
+  }
+
+  .nav-links {
+    display: none;
+  }
+
+  .nav-links.open {
+    display: flex;
+    position: absolute;
+    top: 64px;
+    left: 0;
+    width: 100%;
+  }
+
+  .nav-links ul {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+    background-color: #1a250e;
+    width: 100%;
+  }
+
+  .nav-links ul li a {
+    color: #fff;
+  }
+
+  footer nav {
+    display: none;
+  }
+}
+
+@media (max-width: 700px) {
+  section.home {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 60px;
+  }
+  section.home img {
+    max-width: 80%;
+    object-fit: cover;
+  }
+
+  .about img {
+    max-width: 370px;
+  }
+
+  .about > div {
+    padding: 5px;
+    align-items: center;
+  }
+
+  .about .button {
+    align-self: center;
+  }
+
+  .newsletter > div {
+    flex-wrap: wrap;
+  }
+
+  .newsletter input {
+    height: 40px;
+  }
 }
